@@ -218,15 +218,42 @@ public class MapletBuilder extends RestletBuilder
    }
    
    /**
+    * Creates a Host Maplet. 
+    * This variant of attachHost is necessary if all the configuration of the Host Maplet requires 
+    * more than a domain name and a port number. This is because the Maplet attachment pattern 
+    * is computed dynamically based many properties (allowed domains, ports, etc.).  
+    * @param port The host port.
+    * @return The builder for the created node.
+    */
+   public HostMapletBuilder createHost(int port)
+   {
+      HostMaplet node = new HostMaplet(getNode().getOwner(), port);
+      node.setMode(AttachmentMode.MAPLET);
+      return new HostMapletBuilder(this, node);
+   }
+   
+   /**
     * Attaches a Host Maplet. 
     * @param port The host port.
     * @return The builder for the created node.
     */
    public HostMapletBuilder attachHost(int port)
    {
-      HostMaplet node = new HostMaplet(getNode().getOwner(), port);
+   	return createHost(port).attachParent();
+   }
+   
+   /**
+    * Creates a Host Maplet. 
+    * This variant of attachHost is necessary if all the configuration of the Host Maplet requires 
+    * more than a domain name and a port number. This is because the Maplet attachment pattern 
+    * is computed dynamically based many properties (allowed domains, ports, etc.).  
+    * @param domain The domain name. 
+    * @return The builder for the created node.
+    */
+   public HostMapletBuilder createHost(String domain)
+   {
+      HostMaplet node = new HostMaplet(getNode().getOwner(), domain);
       node.setMode(AttachmentMode.MAPLET);
-      getNode().attach(node.getPattern(), node);
       return new HostMapletBuilder(this, node);
    }
    
@@ -237,9 +264,22 @@ public class MapletBuilder extends RestletBuilder
     */
    public HostMapletBuilder attachHost(String domain)
    {
-      HostMaplet node = new HostMaplet(getNode().getOwner(), domain);
+   	return createHost(domain).attachParent();
+   }
+   
+   /**
+    * Creates a Host Maplet. 
+    * This variant of attachHost is necessary if all the configuration of the Host Maplet requires 
+    * more than a domain name and a port number. This is because the Maplet attachment pattern 
+    * is computed dynamically based many properties (allowed domains, ports, etc.).  
+    * @param domain The domain name. 
+    * @param port The host port.
+    * @return The builder for the created node.
+    */
+   public HostMapletBuilder createHost(String domain, int port)
+   {
+      HostMaplet node = new HostMaplet(getNode().getOwner(), domain, port);
       node.setMode(AttachmentMode.MAPLET);
-      getNode().attach(node.getPattern(), node);
       return new HostMapletBuilder(this, node);
    }
    
@@ -251,10 +291,7 @@ public class MapletBuilder extends RestletBuilder
     */
    public HostMapletBuilder attachHost(String domain, int port)
    {
-      HostMaplet node = new HostMaplet(getNode().getOwner(), domain, port);
-      node.setMode(AttachmentMode.MAPLET);
-      getNode().attach(node.getPattern(), node);
-      return new HostMapletBuilder(this, node);
+   	return createHost(domain, port).attachParent();
    }
 
    /**
