@@ -65,7 +65,7 @@
 <h3>Dependencies</h3>
 <ul>
    <li>For all applications: <a target="_top" href="http://java.sun.com/j2se/1.5.0/">Java SE 5.0</a> or above</li>
-   <li>For standalone HTTP servers: <a target="_top" href="http://jetty.mortbay.org">Jetty 5.1 (recommended)</a>, <a href="http://jetty.mortbay.org/jetty6/">Jetty 6.0 (beta)</a> or <a target="_top" href="http://www.simpleframework.org">Simple 3.1 (ligthest)</a></li>
+   <li>For standalone HTTP servers: <a target="_top" href="http://jetty.mortbay.org">Jetty 5.1 (stable)</a>, <a href="http://jetty.mortbay.org/jetty6/">Jetty 6.0 (beta)</a> or <a target="_top" href="http://www.simpleframework.org">Simple 3.1 (lightest)</a></li>
    <li>For embedded HTTP servers: <a target="_top" href="http://java.sun.com/products/servlet/">Servlet 2.4 container</a></li>
    <li>For dynamic documents: <a target="_top" href="http://www.freemarker.org/">FreeMarker 2.3</a></li>
    <li>For email sending: <a target="_top" href="http://java.sun.com/products/javamail/">JavaMail 1.3</a></li>
